--- a/aula1.html
+++ b/aula1.html
@@ -5,16 +5,16 @@
         <title>Página de tags</title>
     </head>
     <body>
-        <h1>título principal</h1>
+        <h1 style="color:red;font-size:14px">título principal</h1>
         <h2>Segundo </h2>
         <h3>Terceiro </h3>
 
         <p>Era uma vez um texto!</p>
         
-        <a href="https://www.google.com.br">Google</a>
+        <a href="https://www.google.com.br" style="font-size:30px">Google</a>
         <br/><br/>
 
-        <img src="https://www.google.com.br/google.jpg" alt="Logo do Google" />
+        <img src="https://www.google.com.br/google.jpg" alt="Logo do Google" style="width:100px" />
         <br/><br/>
 
         <button>Clique</button>
