--- a/aula1.html
+++ b/aula1.html
@@ -3,6 +3,22 @@
     <head>
         <meta charset="UTF-8" />
         <title>Página de tags</title>
+        <style>
+            h2 {
+                color:blue;
+                font-size:15px;
+            }
+            a {
+                color:dodgerblue;
+                font-size:30px;
+            }
+
+            li {
+                font-weight:bold;
+                color:lightseagreen
+            }
+
+        </style>
     </head>
     <body>
         <h1 style="color:red;font-size:14px">título principal</h1>
